welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: not enough arguments for constructor Array: (_length: Int)Array[java.awt.Color].
Unspecified value parameter _length.
	var t=new Array[Color];
              ^Array2:5: error: ambiguous reference to overloaded definition,
both method to in class RichInt of type (end: Int, step: Int)scala.collection.immutable.Range.Inclusive
and  method to in class RichInt of type (end: Int)scala.collection.immutable.Range.Inclusive
match expected type ?
	for (x<-0 to ) {
                  ^