welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var t=new Array[Color];
	
	for (x<-0 to ) {
		t(x)=getCouleursSol();
		avance()
	}
}
